--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,4 +1,5 @@
 // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
 
-@import "bootstrap-sprockets"
-@import "bootstrap"
+@import "bourbon";
+@import "home";
+@import "users";
